--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,2 +1,4 @@
-<%= render 'form' %>
-<%= link_to "Cancel", @pin %>
+<div class="col-md-6 col-md-offset-3">
+  <%= render 'form' %>
+  <%= link_to "Cancel", @pin %>
+</div>
