--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -10,7 +10,9 @@
       </ul>
     </div>
   <% end %>
-
+<div class="form-group">
+<%= f.input :image, input_html: { :class => "form-control" } %>
+</div>
 <div class="form-group">
 <%= f.input :title, required: true, autofocus: true, input_html: { :class => "form-control" } %>
 </div>
