--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,4 +1,9 @@
-<div class="col-md-6 col-md-offset-3">
-  <%= render 'form' %>
-  <%= link_to "Cancel", @pin %>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Edit Art</h1>
+    <%= image_tag @art.image.url(:medium) %>
+    <%= render 'form' %>
+    <%= link_to "Cancel", @pin %>
+  </div>
 </div>
