--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -8,7 +8,6 @@
       <div class="panel-body">
         <h1><%= @art.title %></h1>
         <p class="description"><%= @art.description %></p>
-        <p>Submitted by <%= @art.user.email %></p>
       </div> <!-- end of panel body -->
       <div class="panel-footer">
         <div class="row">
@@ -17,8 +16,13 @@
           </div>
           <div class="col-md-6">
             <div class="btn-group pull-right">
+              <%= link_to like_art_path(@art), method: :put,class: "btn btn-default" do %>
+                <span class="glyphicon glyphicon-heart"> <%= @art.get_upvotes.size %></span>
+              <% end %>
+              <% if current_user.email == @art.user.email %>
               <%= link_to "Edit", edit_art_path(@art), class: "btn btn-default" %>
               <%= link_to "Delete", art_path(@art), method: "delete", data: {confirm: "Are you sure?"}, class: "btn btn-default" %>
+              <% end %>
             </div>
           </div> <!-- end of row -->
         </div>
