adding postgres for production

--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -1,8 +1,7 @@
 <%= simple_form_for @art, html: {multipart: true} do |f| %>
-  
   <% if @art.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@art.errors.count, "error") %> prevented this Art from being saved:</h2>
+      <h2><%= pluralize(@art.errors.count, "error") %> Prevented this Art from being saved:</h2>
       <ul>
       <% @art.errors.full_messages.each do |message| %>
         <li><%= message %></li>
