--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -10,7 +10,8 @@
     </div>
   <% end %>
 <div class="form-group">
-<%= f.input :image, input_html: { :class => "form-control" } %>
+<br>
+             <input type="hidden" role="uploadcare-uploader"  data-images-only="" data-image-shrink="300x180 80%" data-public-key="35aab9d85173927d04b4" value="" name="art[image_file_name]">  
 </div>
 <div class="form-group">
 <%= f.input :title, required: true, autofocus: true, input_html: { :class => "form-control" } %>
