--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -2,8 +2,8 @@
 <div id="art_show" class="row">
   <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-default">
-      <div class="panel-heading art_image">
-        <%= image_tag @art.image.url %>
+      <div class="panel-heading art_image art_size">
+        <%= image_tag @art.image_file_name %>
       </div>
       <div class="panel-body">
         <h1><%= @art.title %></h1>
