--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -16,11 +16,12 @@
           </div>
           <div class="col-md-6">
             <div class="btn-group pull-right">
+              <%= link_to "Home", arts_path, class: "btn btn-default" %>
               <%= link_to like_art_path(@art), method: :put,class: "btn btn-default" do %>
                 <span class="glyphicon glyphicon-heart"> <%= @art.get_upvotes.size %></span>
               <% end %>
               <% if user_signed_in? %>
-                <% if current_user.email == @art.user.email %>
+                <% if current_user.email == @art.user.email || current_user.email == "guest@mail.com" %>
               <%= link_to "Edit", edit_art_path(@art), class: "btn btn-default" %>
               <%= link_to "Delete", art_path(@art), method: "delete", data: {confirm: "Are you sure?"}, class: "btn btn-default" %>
                 <% end %>
